Payment integration unit testing.

--- a/.env.example
+++ b/.env.example
@@ -38,5 +38,6 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+RAVE_ENV=sandbox
 FLW_PUB=FLWPUBK-1a0a708f5a0ae2c9a8004b614641d2bf-X
 FLW_SEC=FLWSECK-6ad572c85efbdaeb6147c79b99429c9a-X
